Remove Integer.valueOf since it requires Java 1.5
git-svn-id: https://svn.apache.org/repos/asf/incubator/ftpserver/trunk@493994 13f79535-47bb-0310-9956-ffa450edef68